Fix collect t list error