@@ -2,6 +2,7 @@ package com.jcode.fesol.user.service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -46,7 +47,7 @@ public class UserAccountServiceImpl implements UserAccountService {
     @Override
     public List<UserDto> findAll() {
         List<UserAccount> users = userRepository.findAll(); 
-        return users.stream().map(UserMapper.INSTANCE::userAccountToUserDto).toList();
+        return users.stream().map(UserMapper.INSTANCE::userAccountToUserDto).collect(Collectors.toList());
     }
 
     @Override
